--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="home__container bd-container bd-grid">
                     <div class="home__data">
                         <h1 class="home__title">Tasty food</h1>
-                        <h2 class="home__subtitle">Esperimente o prato <br> da semana.</h2>
+                        <h2 class="home__subtitle">Experimente o prato <br> da semana.</h2>
                         <a href="#menu" class="button">Ver Cardápio</a>
                     </div>
     
